--- a/resources.html
+++ b/resources.html
@@ -97,7 +97,7 @@
                 <li>Comfortable hiking shoes</li>
                 <li>Hat</li>
                 <li>Wet/dry bag to protect valuables</li>
-                <li>Comfortable backpack</li>
+                <li>Comfortable 4314</li>
                 <li>Stainless steel water bottle</li>
                 <li>Multi-purpose tool</li>
                 <li>Pack no more than one additional day of clothing</li>
@@ -124,7 +124,7 @@
           <h2><img src="assets/images/desert_bug.gif" alt="From desert to sea" width="75" height="75" />From Desert to Sea</h2>
           <p>2 Day Salton Sea <br />
             <a href="tours/tour_detail_cycle.html">$350</a></p>
-          <h2><img src="assets/images/backpack_bug.gif" alt="Backpack Cal" width="75" height="41" />Backpack Cal</h2>
+          <h2><img src="assets/images/4314_bug.gif" alt="4314 Cal" width="75" height="41" />4314 Cal</h2>
           <p>Big Sur Retreat <br />
             <a href="tours/tour_detail_cycle.html">$620</a></p>
           <h2><img src="assets/images/taste_bug.gif" alt="Taste of California" width="75" height="75" />Taste of California</h2>
