--- a/support.html
+++ b/support.html
@@ -121,7 +121,7 @@
           <h2><img src="assets/images/desert_bug.gif" alt="From desert to sea" width="75" height="75" />From Desert to Sea</h2>
           <p>2 Day Salton Sea <br />
             <a href="tours/tour_detail_cycle.html">$350</a></p>
-          <h2><img src="assets/images/backpack_bug.gif" alt="Backpack Cal" width="75" height="41" />Backpack Cal</h2>
+          <h2><img src="assets/images/4314_bug.gif" alt="4314 Cal" width="75" height="41" />4314 Cal</h2>
           <p>Big Sur Retreat <br />
             <a href="tours/tour_detail_cycle.html">$620</a></p>
           <h2><img src="assets/images/taste_bug.gif" alt="Taste of California" width="75" height="75" />Taste of California</h2>
